[package]
name = "paillier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
log = "0.4"
num = "0.4"
num-bigint = { version = "0.4", features = ["rand"] }
num-modular = "0.5"
num-prime = "0.4"
rand = "0.8"
